Fix Input[type=textarea] popover misalign bug, close #4092

--- a/components/input/style/index.less
+++ b/components/input/style/index.less
@@ -8,6 +8,10 @@
   .input;
 }
 
+.@{ant-prefix}-input-wrapper {
+  display: inline-block;
+}
+
 //== Style for input-group: input with label, with button or dropdown...
 .@{ant-prefix}-input-group {
   .input-group(~"@{ant-prefix}-input");
